@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "0.1.10">
-  <!ENTITY manrevision "0.1.10">
-  <!ENTITY date "December 2003">
+  <!ENTITY appversion "0.1.12">
+  <!ENTITY manrevision "0.1.12">
+  <!ENTITY date "January 2004">
   <!ENTITY app "<application>gtkam</application>">
   <!-- Information about the entities
        The legal.xml file contains legal information, there is no need to edit the file. 
@@ -28,7 +28,7 @@
     <title>&app; Manual V&manrevision;</title>       
 
     <copyright> 
-      <year>2003</year> 
+      <year>2003-2004</year> 
       <holder>Andrew Burton</holder> 
     </copyright> 
 <!-- translators: uncomment this:
@@ -56,7 +56,7 @@
 		<surname>Burton</surname> 
 		<affiliation> 
 	  		<orgname>gPhoto Project</orgname> 
-	  		<address> <email>adb@iinet.net.au</email> </address> 
+	  		<address> <email>adburton@users.sourceforge.net</email> </address> 
 		</affiliation> 
       </author> 
       
